do sentiment analysis

--- a/notebooks/descriptive-statistics.ipynb
+++ b/notebooks/descriptive-statistics.ipynb
@@ -16,13 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from dateutil.parser import parse"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +45,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Textual Lengths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Extract the headline lengths and calculate basic statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +90,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Number of Articles per Publisher"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Count the occurrences of each publisher"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -123,19 +136,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Publication Dates Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Convert 'date' column to datetime format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try:\n",
-    "#   df['date'] = pd.to_datetime(df['date'])\n",
-    "# except:\n",
-    "#   df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
     "df['date'] = pd.to_datetime(df['date'], format='ISO8601')"
    ]
   },
@@ -148,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
