update github actions

--- a/notebooks/pynance-and-ta-lib.ipynb
+++ b/notebooks/pynance-and-ta-lib.ipynb
@@ -112,7 +112,8 @@
     "    \n",
     "    # Calculate financial metrics\n",
     "    data['Return'] = data['Close'].pct_change()\n",
-    "    data['Volatility'] = data['Return'].rolling(window=20).std() * np.sqrt(20)"
+    "    data['Volatility'] = data['Return'].rolling(window=20).std() * np.sqrt(20)\n",
+    "\n"
    ]
   },
   {
